Add image of cookies to cookies.html

--- a/recipes/cookies.html
+++ b/recipes/cookies.html
@@ -8,5 +8,6 @@
 </head>
 <body>
     <h1>Easy, Chewy Flourless Peanut Butter Cookies</h1>
+    <img src="https://imagesvc.meredithcorp.io/v3/mm/image?url=https%3A%2F%2Fpublic-assets.meredithcorp.io%2F40357545393b320aaca417231109a703%2F1643993916flourless%20peanut%20butter%20cookies.jpg&w=899&h=602&c=sc&poi=face&q=60" alt="photo of cookies in recipe">
 </body>
 </html>
