Add recipes.html page content
add headings, paragraphs and lists

--- a/recipes/cookies.html
+++ b/recipes/cookies.html
@@ -7,7 +7,33 @@
     <title>Cookies</title>
 </head>
 <body>
-    <h1>Easy, Chewy Flourless Peanut Butter Cookies</h1>
+    <h1>Flourless Peanut Butter Cookies</h1>
     <img src="https://imagesvc.meredithcorp.io/v3/mm/image?url=https%3A%2F%2Fpublic-assets.meredithcorp.io%2F40357545393b320aaca417231109a703%2F1643993916flourless%20peanut%20butter%20cookies.jpg&w=899&h=602&c=sc&poi=face&q=60" alt="photo of cookies in recipe">
+    <h2>Easy, Chewy Flourless Peanut Butter Cookies</h2>
+    <p>This simple, tasty recipe yields 12 to 16 cookies, but is so simple that it can be doubled (or tripled!) easily.</p>
+    <h3>Ingredients</h3>
+    <ul>
+        <li>1 cup peanut butter</li>
+        <li>1/2 cup white sugar</li>
+        <li>1/3 cup packed brown sugar</li>
+        <li>1 egg</li>
+        <li>1 teaspoon vanilla extract</li>
+        <li>1/2 teaspoon baking soda</li>
+        <li>1/2 cup semisweet chocolate chips(optional)</li>
+    </ul>
+    <h3>Steps</h3>
+    <ol>
+        <li>Preheat oven to 175 degrees C. </li>
+        <li>Beat peanut butter, white sugar, and brown sugar 
+            together in a large bowl with an electric mixer 
+            until smooth. Stir egg, vanilla extract, and 
+            baking soda into peanut butter mixture; stir 
+            in chocolate chips.</li>
+        <li>Drop mixture by small rounded spoonfuls onto 
+            a baking sheet about 5cm apart.</li>
+        <li>Bake in the preheated oven until cookies are 
+            flattened and golden, about 8 minutes.</li>
+    </ol>
+
 </body>
 </html>
