--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 
     <body>
         <h1>Odin Recipes</h1>
-        <a href="recipes/cookies.html">Easy, Chewy Flourless Peanut Butter Cookies</a>
+        <a href="recipes/cookies.html">Flourless Peanut Butter Cookies</a>
     </body>
 
 </html>
