--- a/recipes/cookies.html
+++ b/recipes/cookies.html
@@ -10,7 +10,9 @@
     <h1>Flourless Peanut Butter Cookies</h1>
     <img src="https://imagesvc.meredithcorp.io/v3/mm/image?url=https%3A%2F%2Fpublic-assets.meredithcorp.io%2F40357545393b320aaca417231109a703%2F1643993916flourless%20peanut%20butter%20cookies.jpg&w=899&h=602&c=sc&poi=face&q=60" alt="photo of cookies in recipe">
     <h2>Easy, Chewy Flourless Peanut Butter Cookies</h2>
-    <p>This simple, tasty recipe yields 12 to 16 cookies, but is so simple that it can be doubled (or tripled!) easily.</p>
+    <p>This simple, tasty recipe yields 12 to 16 cookies, 
+        but is so simple that it can be doubled (or tripled!) 
+        easily.</p>
     <h3>Ingredients</h3>
     <ul>
         <li>1 cup peanut butter</li>
