--- a/index.html
+++ b/index.html
@@ -7,7 +7,12 @@
 
     <body>
         <h1>Odin Recipes</h1>
-        <a href="recipes/cookies.html">Flourless Peanut Butter Cookies</a>
+        <ul>
+            <li><a href="recipes/cookies.html">Flourless Peanut Butter Cookies</a>
+            </li>
+            <li><a href="recipes/liver.html">Liver and Onions</a>
+            </li>
+        </ul>
     </body>
 
 </html>
