--- a/index.html
+++ b/index.html
@@ -8,9 +8,14 @@
     <body>
         <h1>Odin Recipes</h1>
         <ul>
-            <li><a href="recipes/cookies.html">Flourless Peanut Butter Cookies</a>
+            <li>
+                <a href="recipes/cookies.html">Flourless Peanut Butter Cookies</a>
             </li>
-            <li><a href="recipes/liver.html">Liver and Onions</a>
+            <li>
+                <a href="recipes/liver.html">Liver and Onions</a>
+            </li>
+            <li>
+                <a href="recipes/meatloaf.html">Easy Meatloaf</a>
             </li>
         </ul>
     </body>
