--- a/recipes/cookies.html
+++ b/recipes/cookies.html
@@ -5,10 +5,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Cookies</title>
+    <link rel="stylesheet" href="../style.css">
 </head>
 <body>
     <h1>Flourless Peanut Butter Cookies</h1>
-    <img src="https://imagesvc.meredithcorp.io/v3/mm/image?url=https%3A%2F%2Fpublic-assets.meredithcorp.io%2F40357545393b320aaca417231109a703%2F1643993916flourless%20peanut%20butter%20cookies.jpg&w=899&h=602&c=sc&poi=face&q=60" alt="photo of cookies in recipe">
+    <img class="img" src="https://imagesvc.meredithcorp.io/v3/mm/image?url=https%3A%2F%2Fpublic-assets.meredithcorp.io%2F40357545393b320aaca417231109a703%2F1643993916flourless%20peanut%20butter%20cookies.jpg&w=899&h=602&c=sc&poi=face&q=60" alt="photo of cookies in recipe">
     <h2>Easy, Chewy Flourless Peanut Butter Cookies</h2>
     <p>This simple, tasty recipe yields 12 to 16 cookies, 
         but is so simple that it can be doubled (or tripled!) 
