--- a/index.html
+++ b/index.html
@@ -3,11 +3,12 @@
     <head>
         <meta charset="utf-8">
         <title>Recipes</title>
+        <link rel="stylesheet" href="style.css">
     </head>
 
     <body>
-        <h1>Odin Recipes</h1>
-        <ul>
+        <h1 class="hp">Odin Recipes</h1>
+        <ul class="link">
             <li>
                 <a href="recipes/cookies.html">Flourless Peanut Butter Cookies</a>
             </li>
