--- a/recipes/liver.html
+++ b/recipes/liver.html
@@ -5,10 +5,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Liver and Onions</title>
+    <link rel="stylesheet" href="../style.css">
 </head>
 <body>
     <h1>Liver and Onions</h1>
-    <img src="https://imagesvc.meredithcorp.io/v3/mm/image?url=https%3A%2F%2Fstatic.onecms.io%2Fwp-content%2Fuploads%2Fsites%2F43%2F2021%2F10%2F27%2FAbsolute-Best-Liver-and-Onions.jpg" alt="liver and onions">
+    <img class="img" src="https://imagesvc.meredithcorp.io/v3/mm/image?url=https%3A%2F%2Fstatic.onecms.io%2Fwp-content%2Fuploads%2Fsites%2F43%2F2021%2F10%2F27%2FAbsolute-Best-Liver-and-Onions.jpg" alt="liver and onions">
     <h2>Absolute Best Liver and Onions</h2>
     <p>This recipe will turn liver haters into converts. 
         Very simple! The three things that will set your 
